plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'org.pageflow'
version = '0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

compileJava {
	options.compilerArgs << '-parameters'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

// flush redis cache
tasks.register('flushRedis', Exec) {
	commandLine 'redis-cli', 'flushall'
}

// 윈도우 용: redis 서버 프로세스 재시작
tasks.register('restartRedisServerOnWindow', Exec) {
	println 'Stopping Redis Server...'
	commandLine 'cmd', '/c', 'taskkill', '/F', '/IM', 'redis-server.exe'
	println 'Redis Server stopped.'
	println 'Starting Redis Server...'
	commandLine 'cmd', '/c', 'start', '/B', 'C:\\Users\\SBS\\Redis-x64-3.0.504\\redis-server.exe'
}


tasks.register('buildReactBookWrite', Exec) {
	workingDir = file('src/main/react/book_write')

	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
		commandLine "npm.cmd", "run", "build"
	} else {
		commandLine "npm", "run", "build"
	}
}

tasks.register('cleanBookWriteBuildDir', Delete) {
	dependsOn "buildReactBookWrite"
	delete file('src/main/resources/static/react/build/book_write')
}

tasks.register('copyReactBookWriteBuildDir', Copy) {
	dependsOn "cleanBookWriteBuildDir"
	from file("src/main/react/book_write/build")
	into file('src/main/resources/static/react/build/book_write')
}



